--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
@@ -1,12 +1,12 @@
 ﻿@inject ActivityController ActivityController
 @inject IStringLocalizer<ActivityLocales> Localize
 
-<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnNameChange="OnNameChange" TaskType="Task.TaskType">
+<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnChange="OnChange" TaskType="Task.TaskType">
     <TaskDetailTemplate>
         @if (EditMode)
         {
             <div class="mt-6">
-                <MudTextField T="string" Label="@Localize["Task.Dialog.ScriptTask.Script.Label"]" Variant="Variant.Filled" @bind-Text="Task.Script" Lines="5" />
+                <MudTextField T="string" Label="@Localize["Task.Dialog.ScriptTask.Script.Label"]" Variant="Variant.Filled" Text="@Task.Script" TextChanged="ScriptChanged" Lines="5" />
             </div>
         }
         else
@@ -33,8 +33,14 @@
     public bool EditMode { get; set; } = false;
 
     [Parameter]
-    public EventCallback OnNameChange { get; set; }
+    public EventCallback OnChange { get; set; }
 
     [Parameter]
     public EventCallback OnRemove { get; set; }
+
+    private async Task ScriptChanged(string text)
+    {
+        Task.Script = text;
+        await OnChange.InvokeAsync();
+    }
 }
