--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/TaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/TaskCard.razor
@@ -3,22 +3,22 @@
 @switch (Task)
 {
     case ExplorerFolderTask explorerFolderTask:
-        <ExplorerFolderTaskCard Task="explorerFolderTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <ExplorerFolderTaskCard Task="explorerFolderTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
     case ProgramTask programTask:
-        <ProgramTaskCard Task="programTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <ProgramTaskCard Task="programTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
     case ScriptTask scriptTask:
-        <ScriptTaskCard Task="scriptTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <ScriptTaskCard Task="scriptTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
     case TerminalTask terminalTask:
-        <TerminalTaskCard Task="terminalTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <TerminalTaskCard Task="terminalTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
     case VSCodeTask vSCodeTask:
-        <VSCodeTaskCard Task="vSCodeTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <VSCodeTaskCard Task="vSCodeTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
     case OpenFileTask openFileTask:
-        <OpenFileTaskCard Task="openFileTask" EditMode="EditMode" OnNameChange="OnNameChange" OnRemove="OnRemove" />
+        <OpenFileTaskCard Task="openFileTask" EditMode="EditMode" OnChange="OnChange" OnRemove="OnRemove" />
         break;
 }
 
@@ -30,7 +30,7 @@
     public bool EditMode { get; set; } = false;
 
     [Parameter]
-    public EventCallback OnNameChange { get; set; }
+    public EventCallback OnChange { get; set; }
 
     [Parameter]
     public EventCallback OnRemove { get; set; }
