--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
@@ -4,7 +4,15 @@
 <MudCard Elevation="_elevation" onclick="@Open" onmouseover="@MouseEnter" onmouseout="@MouseLeave" Style="cursor: pointer; width: 280px;">
     <MudCardHeader>
         <CardHeaderContent>
-            <MudText Typo="Typo.h6" Style="font-size: 1.2rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; max-width: 195px;" title="@Activity.Name">@Activity.Name</MudText>
+            <MudStack Row AlignItems="AlignItems.Center">
+                @if (Activity.LaunchAtStartup)
+                {
+                    <MudTooltip Text="@Localize["Activity.Card.LaunchAtStartupEnabledTooltip"]">
+                        <MudIcon Icon="@Icons.Material.Filled.PowerSettingsNew" />
+                    </MudTooltip>
+                }
+                <MudText Typo="Typo.h6" Style="font-size: 1.2rem; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; max-width: 195px;" title="@Activity.Name">@Activity.Name</MudText>
+            </MudStack>
         </CardHeaderContent>
         <CardHeaderActions>
             @if (IsActivityValid)
@@ -22,7 +30,7 @@
         </CardHeaderActions>
     </MudCardHeader>
     <MudCardContent>
-        <MudText Class="mb-2" Style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;">
+        <MudText Class="mb-2" Style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; height: 48px;">
             @if (!string.IsNullOrWhiteSpace(Activity.Description))
             {
                 @Activity.Description
@@ -45,6 +53,7 @@
                 <MudMenuItem Icon="@Icons.Material.Filled.Code" OnClick="OpenScript">@Localize["Activity.Card.OpenScriptMenu"]</MudMenuItem>
             }
             <MudMenuItem Icon="@Icons.Material.Filled.ContentCopy" OnClick="Duplicate">@Localize["Activity.Card.DuplicateMenu"]</MudMenuItem>
+            <MudMenuItem Icon="@Icons.Material.Filled.PowerSettingsNew" OnClick="ToggleLaunchAtStartup">@Localize[Activity.LaunchAtStartup ? "Activity.Card.DisableLaunchAtStartupMenu" : "Activity.Card.EnableLaunchAtStartup"]</MudMenuItem>
             <MudMenuItem Icon="@Icons.Material.Filled.Delete" OnClick="Delete">@Localize["Activity.Card.DeleteMenu"]</MudMenuItem>
         </MudMenu>
     </MudCardActions>
@@ -106,5 +115,17 @@
     private async Task Delete()
     {
         await ActivityController.PromptDeleteActivity(Activity);
+    }
+
+    private async Task ToggleLaunchAtStartup()
+    {
+        if(Activity.LaunchAtStartup)
+        {
+            await ActivityController.DisableLaunchAtStartup(Activity);
+        }
+        else
+        {
+            await ActivityController.PromptEnableLaunchAtStartup(Activity);
+        }
     }
 }
