--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
@@ -10,6 +10,7 @@
                     <MudStack Spacing="4">
                         <MudTextField T="string" Style="width: 50%;" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" Variant="Variant.Filled" />
                         <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Filled" />
+                        <MudCheckBox @bind-Checked="_activity.LaunchAtStartup" Color="Color.Primary">@Localize["Activity.Dialog.LaunchAtStartup.Label"]</MudCheckBox>
                     </MudStack>
                     <TasksDialogSection Class="my-12" Activity="_activity" EditMode />
                     <ErrorText Class="mb-6" Error="@ActivityNameError" />
