--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
@@ -30,7 +30,7 @@
         </CardHeaderActions>
     </MudCardHeader>
     <MudCardContent>
-        <MudText Class="mb-2" Style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; height: 48px;">
+        <MudText Class="mb-2" Style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; height: 48px;" title="@Activity.Description">
             @if (!string.IsNullOrWhiteSpace(Activity.Description))
             {
                 @Activity.Description
