--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/GenericTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/GenericTaskCard.razor
@@ -7,7 +7,7 @@
             <MudStack Row AlignItems="AlignItems.Center" Spacing="4">
                 <TaskIcon TaskType="TaskType" Size="30" />
                 <MudText Typo="Typo.body1" Style="font-weight: bold;">@DisplayName</MudText>
-                <MudTooltip ShowOnClick Arrow ShowOnHover="false" ShowOnFocus="false" >
+                <MudTooltip Arrow ShowOnHover ShowOnClick="false" ShowOnFocus="false" >
                     <ChildContent>
                         <MudIconButton Class="pa-0" Icon="@Icons.Material.Filled.HelpOutline" />
                     </ChildContent>
