--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
@@ -9,7 +9,7 @@
                 <MudForm @ref="_form">
                     <MudStack Spacing="4">
                         <MudTextField T="string" Style="width: 50%;" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" Variant="Variant.Filled" />
-                        <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Filled" />
+                         <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Filled" AutoGrow />
                         <MudCheckBox @bind-Checked="_activity.LaunchAtStartup" Color="Color.Primary">@Localize["Activity.Dialog.LaunchAtStartup.Label"]</MudCheckBox>
                     </MudStack>
                     <TasksDialogSection Class="my-12" Activity="_activity" EditMode />
