update about page

--- a/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
@@ -113,7 +113,7 @@
 
             AppConfiguration.SetLanguage(_language);
             AppConfiguration.SetTheme(_theme);
-            Navigation.NavigateTo(Routes.ActivitiesPage, replace: true);
+            Navigation.NavigateTo(Routes.AboutPage, replace: true);
         }
         else
         {
