--- a/Solution/ActivityLauncher.Client/Pages/About/AboutPage.razor
+++ b/Solution/ActivityLauncher.Client/Pages/About/AboutPage.razor
@@ -3,24 +3,16 @@
 @attribute [Route(Routes.AboutPage)]
 
 <MudContainer MaxWidth="MaxWidth.Large">
-    <MudText Typo="Typo.h4" Class="mb-8">@Localize["Title"]</MudText>
+    <MudText Typo="Typo.h4" Class="mb-6">@Localize["Title"]</MudText>
 
-    <MudText Class="mb-8" Typo="Typo.body1">@Localize["Description"]</MudText>
-
-    <div class="mx-4 mb-8">
-        <MudText Class="mb-4" Typo="Typo.body1">@(new MarkupString(Localize["SellingPoint.1"]))</MudText>
-        <MudText Class="mb-4" Typo="Typo.body1">@(new MarkupString(Localize["SellingPoint.2"]))</MudText>
-        <MudText Class="mb-4" Typo="Typo.body1">@(new MarkupString(Localize["SellingPoint.3"]))</MudText>
-        <MudText Class="mb-4" Typo="Typo.body1">@(new MarkupString(Localize["SellingPoint.4"]))</MudText>
-        <MudText Typo="Typo.body1">@(new MarkupString(Localize["SellingPoint.5"]))</MudText>
-    </div>
-
-    <MudText Class="mb-2" Typo="Typo.h6">@Localize["Target.1.Title"]</MudText>
-    <MudText Class="mb-4" Typo="Typo.body1">@Localize["Target.1.Description"]</MudText>
-
-    <MudText Class="mb-2" Typo="Typo.h6">@Localize["Target.2.Title"]</MudText>
-    <MudText Class="mb-8" Typo="Typo.body1">@Localize["Target.2.Description"]</MudText>
-
-    <MudText Class="mb-2" Typo="Typo.h6">@Localize["Credits.Title"]</MudText>
-    <MudText Class="mb-16" Typo="Typo.body1">@(new MarkupString(Localize["Credits.Description"]))</MudText>
+    <MudText Class="mb-6" Typo="Typo.body1">@Localize["Description"]</MudText>
+    
+    <MudText Class="mb-1" Typo="Typo.h6" Color="Color.Error">@Localize["Disclaimer.Title"]</MudText>
+    <MudText Class="mb-6" Typo="Typo.body1" Color="Color.Error">@(new MarkupString(Localize["Disclaimer.Content"]))</MudText>
+    
+    <MudText Class="mb-1" Typo="Typo.h6">@Localize["Startup.Setup"]</MudText>
+    <MudText Class="mb-16" Typo="Typo.body1">@(new MarkupString(Localize["Startup.Setup.Instructions"]))</MudText>
+    
+    <MudText Class="mb-1" Typo="Typo.h6">@Localize["About.Title"]</MudText>
+    <MudText Typo="Typo.body1">@(new MarkupString(Localize["About.Description"]))</MudText>
 </MudContainer>
