--- a/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization;
-@using ActivityLauncher.Client.Common.Theming;
-@using ActivityLauncher.Client.Common.Utils;
+@using ActivityLauncher.Client.Core.Theming;
+@using ActivityLauncher.Client.Core.Utils;
 @using ActivityLauncher.Domain.Common.Localization;
 
 @implements IAsyncDisposable
