--- a/Solution/ActivityLauncher.Client/_Imports.razor
+++ b/Solution/ActivityLauncher.Client/_Imports.razor
@@ -4,13 +4,13 @@
 @using MudBlazor
 @using Humanizer
 
-@using ActivityLauncher.Client.Common.Controllers
-@using ActivityLauncher.Client.Common.Events
-@using ActivityLauncher.Client.Common.Extensions
-@using ActivityLauncher.Client.Common.Navigation
-@using ActivityLauncher.Client.Common.Services
-@using ActivityLauncher.Client.Common.Theming
-@using ActivityLauncher.Client.Common.Utils
+@using ActivityLauncher.Client.Core.Controllers
+@using ActivityLauncher.Client.Core.Events
+@using ActivityLauncher.Client.Core.Extensions
+@using ActivityLauncher.Client.Core.Navigation
+@using ActivityLauncher.Client.Core.Services
+@using ActivityLauncher.Client.Core.Theming
+@using ActivityLauncher.Client.Core.Utils
 
 @using ActivityLauncher.Client.Shared.Atoms
 @using ActivityLauncher.Client.Shared.Molecules
