rename module and self host font

--- a/Solution/ActivityLauncher.Client/Modules/Activities/Molecules/ActivityCard.razor
+++ b/Solution/ActivityLauncher.Client/Modules/Activities/Molecules/ActivityCard.razor
@@ -123,13 +123,6 @@
 
     private async Task ToggleLaunchAtStartup()
     {
-        if (Activity.LaunchAtStartup)
-        {
-            await ActivityController.DisableLaunchAtStartup(Activity);
-        }
-        else
-        {
-            await ActivityController.PromptEnableLaunchAtStartup(Activity);
-        }
+        await ActivityController.SetActivityLaunchAtStartup(Activity, !Activity.LaunchAtStartup);
     }
 }
