--- a/Solution/ActivityLauncher.Client/Modules/Activities/Molecules/Tasks/TerminalTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Modules/Activities/Molecules/Tasks/TerminalTaskCard.razor
@@ -1,6 +1,4 @@
-﻿@using ActivityLauncher.Client.Pages.Activities.Atoms;
-
-@inject ActivityController ActivityController
+﻿@inject ActivityController ActivityController
 @inject IStringLocalizer<ActivityLocales> Localize
 
 <GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnChange="OnChange" TaskType="Task.TaskType">
