--- a/Solution/ActivityLauncher.Client/Modules/Activities/Organisms/TasksDialogSection.razor
+++ b/Solution/ActivityLauncher.Client/Modules/Activities/Organisms/TasksDialogSection.razor
@@ -1,7 +1,4 @@
-﻿@using ActivityLauncher.Client.Pages.Activities.Atoms;
-@using ActivityLauncher.Client.Pages.Activities.Molecules;
-
-@inject IStringLocalizer<ActivityLocales> Localize
+﻿@inject IStringLocalizer<ActivityLocales> Localize
 
 <div class="@Class">
     <MudStack Class="mb-8" Row Justify="Justify.SpaceBetween">
