--- a/Solution/ActivityLauncher.Client/Modules/Activities/Pages/ActivitiesPage.razor
+++ b/Solution/ActivityLauncher.Client/Modules/Activities/Pages/ActivitiesPage.razor
@@ -1,4 +1,4 @@
-﻿@using ActivityLauncher.Client.Pages.Activities.Molecules;
+﻿@using ActivityLauncher.Client.Modules.Activities.Molecules;
 
 @implements IDisposable
 
