make solution compile

--- a/Solution/ActivityLauncher.Client/Modules/About/Pages/AboutPage.razor
+++ b/Solution/ActivityLauncher.Client/Modules/About/Pages/AboutPage.razor
@@ -1,4 +1,4 @@
-﻿@attribute [Route(Routes.AboutPage)]
+﻿@attribute [Route(NavigationRoutes.AboutPage)]
 
 @inject IStringLocalizer<AboutPageLocales> Localize
 @inject IActivitiesStartupService StartupService
