--- a/Solution/ActivityLauncher.Client/Modules/Activities/Pages/ActivitiesPage.razor
+++ b/Solution/ActivityLauncher.Client/Modules/Activities/Pages/ActivitiesPage.razor
@@ -2,7 +2,7 @@
 
 @implements IDisposable
 
-@attribute [Route(Routes.ActivitiesPage)]
+@attribute [Route(NavigationRoutes.ActivitiesPage)]
 
 @inject ActivityController ActivityController
 @inject IStringLocalizer<ActivityLocales> Localize
